<!--

    Copyright 2021 Systems Research Group, University of St Andrews:
    <https://github.com/stacs-srg>

    This file is part of the module neo-storr.

    neo-storr is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
    License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later
    version.

    neo-storr is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.

    You should have received a copy of the GNU General Public License along with neo-storr. If not, see
    <http://www.gnu.org/licenses/>.

-->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>uk.ac.standrews.cs</groupId>
        <artifactId>common-pom</artifactId>
        <version>4.0-SNAPSHOT</version>
    </parent>

    <artifactId>neo-storr</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>neo-storr</name>

    <description>Storr API with Neo4J backend</description>
    <inceptionYear>2021</inceptionYear>

    <properties>

        <commons-lang3-version>3.18.0</commons-lang3-version>
        <neo4j-version>5.26.9</neo4j-version>
        <neo4j-java-driver-version>5.26.3</neo4j-java-driver-version>
        <jdk.version>21</jdk.version>

    </properties>

    <repositories>

        <!-- This has to be replicated from the parent POM so the parent POM can be found. -->

        <repository>
            <id>uk.ac.standrews.cs.maven.repository</id>
            <name>School of Computer Science Maven Repository</name>
            <url>https://maven.cs.st-andrews.ac.uk/</url>
        </repository>

    </repositories>

    <dependencies>

        <!-- To check for updated versions of dependencies, run on command line:
             mvn versions:display-dependency-updates -->

        <dependency>
            <groupId>uk.ac.standrews.cs</groupId>
            <artifactId>utilities</artifactId>
            <version>1.1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3-version}</version>
        </dependency>

        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j</artifactId>
            <version>${neo4j-version}</version>
        </dependency>

        <dependency>
            <groupId>org.neo4j.driver</groupId>
            <artifactId>neo4j-java-driver</artifactId>
            <version>${neo4j-java-driver-version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.neo4j.test</groupId>
            <artifactId>neo4j-harness</artifactId>
            <version>5.26.9</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <parallel>none</parallel>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <developers>

        <developer>
            <id/>
            <name>Alan Dearle</name>
            <email>alan.dearle@st-andrews.ac.uk</email>
            <url>https://al.host.cs.st-andrews.ac.uk/</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

        <developer>
            <id/>
            <name>Graham Kirby</name>
            <email>graham.kirby@st-andrews.ac.uk</email>
            <url>https://www.st-andrews.ac.uk/computer-science/people/gnck</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

    </developers>

</project>  
